k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goldilocks
  labels:
    app.kubernetes.io/name: goldilocks
    app.kubernetes.io/part-of: goldilocks
